pkg/provider/kubernetes/ingress/fixtures/v18-Ingress-with-empty-pathType_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing
  annotations:
    traefik.ingress.kubernetes.io/router.pathmatcher: Path
spec:
  rules:
  - http:
      paths:
      - path: /bar
        pathType: ""
        backend:
          serviceName: service1
          servicePort: 80
